# Sparse-VideoGen

./: .gitattributes  .gitignore  .gitmodules  README.md  README_QA.md  captions_sora.json  cog_inference.py  cosmos_t2v_inference.py  dataloader.py  hyvideo_i2v_inference.py  hyvideo_inference.py  hyvideo_t2v_inference.py  orig_hyvideo_inference.py  orig_wan_generate.py  pyproject.toml  requirements.txt  wan_i2v_inference.py  wan_inference.py  wan_t2v_inference.py
assets/patches/: modifications.patch
examples/2/: prompt.txt
examples/3/: prompt.txt
examples/4/: prompt.txt
examples/7/: prompt.txt
examples/cog/txt/: boat.txt
examples/hyvideo/: cat.txt  girl.txt  spaceship.txt  viking.txt
examples/wan/1/: prompt.txt
examples/wan/3/: prompt.txt
scripts/: cog_inference.sh  dist_cog_inference.sh  dist_hyvideo_inference.sh  hyvideo_inference.sh  orig_wan_i2v_inference.sh  orig_wan_t2v_480p_inference.sh  orig_wan_t2v_720p_inference.sh  wan_i2v_inference.sh  wan_inference.sh  wan_t2v_480p_inference.sh  wan_t2v_720p_inference.sh  wan_t2v_inference.sh
scripts/cosmos/: cosmos_t2v_dense.sh  cosmos_t2v_sap.sh  cosmos_t2v_svg.sh
scripts/hyvideo/: hyvideo_i2v_720p_dense.sh  hyvideo_t2v_480p_dense.sh  hyvideo_t2v_480p_sap.sh  hyvideo_t2v_480p_svg.sh  hyvideo_t2v_720p_dense.sh  hyvideo_t2v_720p_sap.sh  hyvideo_t2v_720p_svg.sh
scripts/hyvideo/frisbee/: hyvideo_t2v_480p_dense.sh  hyvideo_t2v_480p_sap.sh  hyvideo_t2v_480p_svg.sh  hyvideo_t2v_720p_dense.sh  hyvideo_t2v_720p_sap.sh  hyvideo_t2v_720p_svg.sh
scripts/hyvideo_orig/: orig_hyvideo_download.sh  orig_hyvideo_t2v_540p_dense.sh  orig_hyvideo_t2v_540p_svg.sh  orig_hyvideo_t2v_720p_dense.sh  orig_hyvideo_t2v_720p_svg.sh  orig_hyvideo_t2v_720p_svg2fast_frisbee.sh
scripts/hyvideo_orig/frisbee/: orig_hyvideo_t2v_540p_dense.sh  orig_hyvideo_t2v_720p_dense.sh  orig_hyvideo_t2v_720p_sap.sh  orig_hyvideo_t2v_720p_svg.sh
scripts/wan/: wan_i2v_480p_dense.sh  wan_i2v_480p_sap.sh  wan_i2v_480p_svg.sh  wan_i2v_720p_dense.sh  wan_i2v_720p_sap.sh  wan_i2v_720p_svg.sh  wan_t2v_720p_dense.sh  wan_t2v_720p_sap.sh  wan_t2v_720p_svg.sh
scripts/wan_orig/: orig_wan_i2v_inference.sh  orig_wan_t2v_480p_inference.sh  orig_wan_t2v_720p_inference.sh
svg/: README.md  kmeans_utils.py  timer.py  utils.py
svg/kernels/: CMakeLists.txt  setup.sh
svg/kernels/csrc/: ops.cu  ops.h  pytorch_extension_utils.h
svg/kernels/include/norm/: cutlass_layer_norm.cuh  device_utils.cuh  narrow_layer_norm.cuh  narrow_rms_norm.cuh
svg/kernels/include/rope/: rope_enc.cuh  rope_enc_complex.cuh  rope_enc_txtlast.cuh
svg/kernels/ops/: __init__.py  attention_ops.py  attention_ops_wan.py  attention_ops_wan_dyn_blk.py
svg/kernels/test/: bench_apply_rope.py  bench_apply_rope_complex.py  bench_layer_norm.py  bench_rms_norm.py  test_apply_rope.py  test_apply_rope_complex.py  test_apply_rope_txtlast.py  test_kmeans_torch.py  test_layer_norm.py  test_rms_norm.py  test_sparse_attn.py  test_sparse_attn_dyn_blk_wan.py  test_sparse_attn_wan.py
svg/kernels/triton/: permute.py
svg/models/: utils.py
svg/models/cog/: attention.py  custom_models.py  inference.py  placement.py  utils.py
svg/models/cosmos/: attention.py  custom_models.py  inference.py  misc.py  placement.py  utils.py
svg/models/hyvideo/: attention.py  config.py  custom_models.py  inference.py  placement.py  utils.py
svg/models/hyvideo/modules/: attenion.py  custom_models.py  (+1 more)
svg/models/hyvideo_orig/: config.py  constants.py  inference.py  prompt_rewrite.py
svg/models/wan/: attention.py  custom_models.py  inference.py  placement.py  utils.py
svg/models/wan_orig/: image2video.py  text2video.py
svg/utils/: extract_time.py  metric.py  seed.py  vbench.py
(+39 files in other folders)
